--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,3 +28,18 @@ a.active hr{
         color: white;
     }
   }
+
+  /* Slider for universities */
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-scroll {
+  animation: scroll 20s linear infinite;
+}
+
